# tangled-nature

./: .gitignore  Cargo.toml  README.md  classic_viz.py  ensemble_run.py  figures.R  orchestrator.py  run_overnight.sh  spatial_viz.py  spatial_viz2.py
experiments/adiabatic_hysteresis/: analysis.R
experiments/causal_emergence/: causal_emergence.py  run.sh  test_causal_emergence.py  visualize.py
experiments/forked_quench/: forked_quench.py
experiments/harvest_forks/: analyze.py  run.sh  test_analyze.py  visualize.py  visualize_heatmaps.py
experiments/mete_ensemble/: mete_analysis.R  preprocess.py  quake_analysis.py  run.sh  test_mete_analysis.R  test_preprocess.py  test_quake_analysis.py  visualize.py
experiments/pulse_perturbation/: pulse_perturbation.py
experiments/species_removal/: species_removal.py
reference/: Cargo.toml
reference/simlog/: species_genome_1772057033_0.001.txt  species_genome_1772057194_0.001.txt  species_genome_1772197730_0.001.txt  species_population_1772057033_0.001.txt  species_population_1772057194_0.001.txt  species_population_1772197730_0.001.txt
scripts/: classic_viz.py  spatial_viz.py  spatial_viz2.py
src/: config.rs  main.rs  model.rs  output.rs  spatial.rs  state.rs
tests/: test_equivalence.py  test_metrics.py
