[package]
name = "tangled-nature"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true

[dependencies]
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"